fix body overflow

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,3 +1,8 @@
+body {
+  overflow: hidden;
+}
+
+
 .Container {
     position: relative;
     min-height: 300px;
